--- a/_0.settings.typography.scss
+++ b/_0.settings.typography.scss
@@ -34,12 +34,7 @@ $types: (
     font-weight   : $t-bold,
     font-size     : 1.75rem,
     line-height   : 1.143
-  ),
-  title-small: (
-    font-weight   : $t-bold,
-    font-size     : 1.125rem,
-    line-height   : 1.667
-  ),
+  )
   paragraph: (
     font-size     : 1rem,
     line-height   : 1.375
@@ -48,13 +43,8 @@ $types: (
     font-weight   : $t-light,
     font-size     : .874rem,
     line-height   : 1.285
-  ),
-  label: (
-    font-weight   : $t-light,
-    font-size     : 0.75rem,
-    line-height   : 1.33
   )
-);
+) !default;
 
 @mixin t($name: default) {
   @if map-has-key($types, $name) {
