Makes mixins globally define so they can be used as @include on project's modules.

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -5,4 +5,7 @@
     "mixins/tools-shape",
     "mixins/tools-position",
     "mixins/tools-icons",
-    "mixins/inline-block-fix";
+    "mixins/inline-block-fix"
+    "mixins/2.layout.mixins",
+    "mixins/3.helpers.mixins",
+    "mixins/5.states.mixins";
