--- a/_mixins.scss
+++ b/_mixins.scss
@@ -6,6 +6,6 @@
     "mixins/tools-position",
     "mixins/tools-icons",
     "mixins/inline-block-fix"
-    "mixins/2.layout.mixins",
-    "mixins/3.helpers.mixins",
-    "mixins/5.states.mixins";
+    "mixins/layout",
+    "mixins/helpers",
+    "mixins/states";
