--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,5 +1,5 @@
 @import
-    "mixins/print",
+    "mixins/cssify-map",
     "mixins/prefix-rule",
     "mixins/tools-size",
     "mixins/tools-shape",
