--- a/mixins/_cssify-map.scss
+++ b/mixins/_cssify-map.scss
@@ -1,4 +1,4 @@
-@mixin print($declarations) {
+@mixin cssify-map($declarations) {
   @each $property, $value in $declarations {
     #{$property}: $value
   }
