Fixes typo on mixins.

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -5,7 +5,7 @@
     "mixins/tools-shape",
     "mixins/tools-position",
     "mixins/tools-icons",
-    "mixins/inline-block-fix"
+    "mixins/inline-block-fix",
     "mixins/layout",
     "mixins/helpers",
     "mixins/states";
