fixes typography map

--- a/_0.settings.typography.scss
+++ b/_0.settings.typography.scss
@@ -34,7 +34,7 @@ $types: (
     font-weight   : $t-bold,
     font-size     : 1.75rem,
     line-height   : 1.143
-  )
+  ),
   paragraph: (
     font-size     : 1rem,
     line-height   : 1.375
