adds global settings to the setting file

--- a/_0.settings.sizes.scss
+++ b/_0.settings.sizes.scss
@@ -1,5 +1,5 @@
 $s-design-width: 1024px !default;
-$s-golden: 1.61803398875 !default;
+$s-golden: 1.61803398875;
 $s-base: 1rem !default;
 
 $breakpoints: (
