--- a/mixins/_prefix-rule.scss
+++ b/mixins/_prefix-rule.scss
@@ -1,21 +1,16 @@
-/**
- * Prfixes a rulename with your prefered prefix.
- * Can also be used to create placeholder and normal classes
- *
- * prefix-rules( $ruleName,$prefixes )
- * @type {[string/list]} $ruleName class or/and placeholder name
- * @type {[list]} $refixes selector slug
- *
- * usage:
- *  @include prefix-rule( "foo", ".l-" ".is-" "%" ) {
- *      margin: 20px;
- *  }
- * generates:
- *  .l-foo, .is-foo, %foo {
- *      margin: 20px;
- *  }
- *
- */
+//Prfixes a rulename with your prefered prefix.
+//Can also be used to create placeholder and normal classes
+//prefix-rules( $ruleName,$prefixes )
+//@type {[string/list]} $ruleName class or/and placeholder name
+//@type {[list]} $refixes selector slug
+//usage:
+// @include prefix-rule( "foo", ".l-" ".is-" "%" ) {
+//     margin: 20px;
+// }
+//generates:
+// .l-foo, .is-foo, %foo {
+//     margin: 20px;
+// }
 $default-selector-prefixes: "%" "." !default;
 
 @mixin prefix-rule ( $ruleNames, $prefixes: $default-selector-prefixes) {
