--- a/mixins/_states.scss
+++ b/mixins/_states.scss
@@ -19,27 +19,21 @@
     }
 }
 
-/*
- * Generic class to disable buttons and links
- */
+// Generic class to disable buttons and links
 @mixin disabled {
     opacity: 0.5;
     pointer-events: none;
 }
 
-/*
- * Hide visually and from screen readers: h5bp.com/u
- */
+// Hide visually and from screen readers: h5bp.com/u
 @mixin hidden {
     display: none !important;
     visibility: hidden;
 }
 
-/**
- * Used to show elements
- * will be set to inherit by default, but can be block inline or inline-block as well,
- * just use the modifiers
- */
+// Used to show elements
+// will be set to inherit by default, but can be block inline or inline-block as well,
+// just use the modifiers
 @mixin visible {
     display: inherit !important;
     visibility: visible;
