--- a/mixins/_tools-position.scss
+++ b/mixins/_tools-position.scss
@@ -1,7 +1,5 @@
-/**
- * Absolutely centers an element in it's parent horizontal, vertically or in both directions
- * @direction {[string]} vertical, horizontal or both
- */
+// Absolutely centers an element in it's parent horizontal, vertically or in both directions
+// @direction {[string]} vertical, horizontal or both
 @mixin absolute-center (
   $direction: both
 ){
@@ -18,17 +16,13 @@
   }
 }
 
-/**
- * Circle trigonometric mixin
- * x = a + r cos (t)
- * y = b + r cos (t)
- *
- * where (a,b) is the center of the circle
- * (in our case a = 0 and b = 0 for simplicity. )
- *
- * @degres {[degrees]} in deg
- * @degres {[radius]} in whatever unit
-**/
+// Circle trigonometric mixin
+// x = a + r cos (t)
+// y = b + r cos (t)
+// where (a,b) is the center of the circle
+// (in our case a = 0 and b = 0 for simplicity. )
+// @degres {[degrees]} in deg
+// @degres {[radius]} in whatever unit
 @mixin translate-point-from-circle-centre($degres, $radius: $s-base) {
   $x-value: circle-x($radius, $degree);
   $y-value: circle-y($radius, $degree);
