--- a/mixins/_tools-shape.scss
+++ b/mixins/_tools-shape.scss
@@ -1,10 +1,8 @@
-/**
- * triangle mixin produces a crossbrowser CSS triangle
- * @height {[value]} height of the arrow
- * @color {[color]} arrow color
- * @direction {[string]} can be up down left or right
- * @width: {[value]} by default the arrow has the same height and width
- */
+// triangle mixin produces a crossbrowser CSS triangle
+// @height {[value]} height of the arrow
+// @color {[color]} arrow color
+// @direction {[string]} can be up down left or right
+// @width: {[value]} by default the arrow has the same height and width
 @mixin triangle( $height: 10px, $color: #000, $direction: up, $width: false ){
 	@if $width == false {
 		$width: $height;
@@ -34,11 +32,9 @@
 	}
 }
 
-/**
- * circle mixin produces a circle of a given color and size
- * @size {[value]} diameter of the circle
- * @color {[color]} fill color
- */
+// circle mixin produces a circle of a given color and size
+// @size {[value]} diameter of the circle
+// @color {[color]} fill color
 @mixin circle( $size: 20px, $color: #000 ) {
 	width: $size; height: $size;
 	border-radius: 100%;
