moves absolute-center mixin to layout

--- a/mixins/_layout.scss
+++ b/mixins/_layout.scss
@@ -1,4 +1,3 @@
-
 // Clearfix: contain floats
 // For modern browsers
 // 1. The space content is one way to avoid an Opera bug when the
@@ -169,4 +168,22 @@ $horizontal-list-types: (
   display: inline-block;
   max-width: 90%;
   text-align: left;
+}
+
+// Absolutely centers an element in it's parent horizontal, vertically or in both directions
+// @direction {[string]} vertical, horizontal or both
+@mixin absolute-center (
+  $direction: both
+){
+  position: absolute;
+  @if $direction == both {
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+  } @else if $direction == horizontal {
+    left: 50%;
+    transform: translateX(-50%);
+  } @else if $direction == vertical {
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
