--- a/mixins/_layout.scss
+++ b/mixins/_layout.scss
@@ -208,20 +208,20 @@ $horizontal-list-types: (
 //     consider a different inline-block gap avoiding technique:
 //     https://css-tricks.com/fighting-the-space-between-inline-block-elements/
 @mixin center-inline-block-wrap () {
-  font-size: 0.0001px;            /* [1] */
-  text-align: center;             /* [2] */
-  &:before {                      /* [3] */
-    content: '';                  /* [3] */
-    display: inline-block;        /* [4] */
+  font-size: 0.0001px;            // [1]
+  text-align: center;             // [2]
+  &:before {                      // [3]
+    content: '';                  // [3]
+    display: inline-block;        // [4]
     vertical-align: middle;
-    height: 100%;                 /* [5] */
+    height: 100%;                 // [5]
   }
 }
 
 @mixin center-inline-block-inner () {
-  display: inline-block;          /* [6] */
-  text-align: left;               /* [7] */
-  font-size: 1rem;                /* [8] */
+  display: inline-block;          // [6]
+  text-align: left;               // [7]
+  font-size: 1rem;                // [8]
   vertical-align: middle;
 }
 
@@ -234,11 +234,11 @@ $horizontal-list-types: (
 // [3] centers the inner element vertically
 
 @mixin center-flex-wrap {
-  display: flex;                /* [1] */
-  justify-content: center;      /* [2] */
+  display: flex;                // [1]
+  justify-content: center;      // [2]
 }
 @mixin center-flex-inner {
-  align-self: center;           /* [3] */
+  align-self: center;           // [3]
 }
 
 // Circle trigonometric mixin
