--- a/_0.settings.scss
+++ b/_0.settings.scss
@@ -22,6 +22,6 @@ $state-selectors-and:   "&%is-" "&.is-";
 
 
 @include
-  "0.settigs.sizes",
-  "0.settigs.colors",
-  "0.settigs.typography";
+  "0.settings.sizes",
+  "0.settings.colors",
+  "0.settings.typography";
