renames size tool

--- a/_0.settings.sizes.scss
+++ b/_0.settings.sizes.scss
@@ -18,7 +18,7 @@ $sizes: (
   small       : $s-base * .5
 )  !default;
 
-@function s($name: medium) {
+@function size($name: medium) {
   @if map-has-key($sizes, $name) {
     @return map-get($sizes, $name);
   }
