adds default breakpoint option

--- a/_0.settings.sizes.scss
+++ b/_0.settings.sizes.scss
@@ -11,6 +11,9 @@ $breakpoints: (
   "print"               : "print"
 ) !default;
 
+// desktop or mobile-first?
+$breakpoint-default: desktop;
+
 $sizes: (
   huge        : $s-base * 3,
   large       : $s-base * 1.5,
