--- a/_mixins.scss
+++ b/_mixins.scss
@@ -2,6 +2,7 @@
   "mixins/cssify-map",
   "mixins/prefix-rule",
   "mixins/tools-size",
+  "mixins/tools-typography",
   "mixins/tools-shape",
   "mixins/tools-icons",
   "mixins/inline-block-fix",
