moves and renames color mixin

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,6 +1,7 @@
 @import
   "mixins/cssify-map",
   "mixins/prefix-rule",
+  "mixins/tools-color",
   "mixins/tools-size",
   "mixins/tools-typography",
   "mixins/tools-shape",
