--- a/_1.base.scss
+++ b/_1.base.scss
@@ -2,7 +2,7 @@
 html {
   min-height:100%;
   font: $t-default-font-family/#{$t-default-line-height} $t-default-font-family;
-  color: c(black);
+  color: color(black);
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   overflow-y:scroll;
@@ -19,12 +19,12 @@ strong {
 // These selection rule sets have to be separate.
 // Customize the background color to match your design.
 ::-moz-selection {
-  background: c(blue-light);
+  background: color(blue-light);
   text-shadow: none;
 }
 
 ::selection {
-  background: c(blue-light);
+  background: color(blue-light);
   text-shadow: none;
 }
 
