makes sure default text class is not rendered

--- a/_1.base.scss
+++ b/_1.base.scss
@@ -57,11 +57,5 @@ $text-selectors: "%t-" ".t-" !default;
 $typography-classes: true !default;
 
 @if $typography-classes {
-  $default-types: map-get($types, $breakpoint-default);
-
-  @each $rule, $key in $default-types {
-    @include prefix-rule($rule, $prefixes: $text-selectors ) {
-      @include type($rule);
-    }
-  }
+  @inlcude textClasses($text-selectors);
 }
